<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/planNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="none"
        android:text="Plan name"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Plan goal"/>

    <Spinner
        android:id="@+id/planGoalSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Frequency"/>

    <Spinner
        android:id="@+id/trainingFrequencySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gender"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/savePlanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save plan"/>

    <Button
        android:id="@+id/addDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add days"/>
</LinearLayout>